# chamanp

./: .gitignore  CHANGELOG.md  CITATION.cff  DESIGN.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  config.py  environment.yml  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  publish-to-pypi.yml
artifacts/reports/: report_dbprep_pubchem.txt
chamanp/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  result.py  version.py
chamanp/_core/: __init__.py  base_pipeline.py  curator.py  filter.py  fingerprints.py  preflight.py  reporter.py
chamanp/_utils/: __init__.py  path_manager.py  result_manager.py
core/: base_pipeline.py  curator.py  filter.py  fingerprints.py  preflight.py  reporter.py  version.py
docs/: api.md  index.md  usage.md
docs/stylesheets/: extra.css
examples/: chamanp.toml  example_chamanp.csv
scripts/: smoke_install_wheel.ps1
source_data/: README.md  coconut_taxonomy.json
tests/: test_chamanp_config.py  test_cli.py  test_collection_utils.py  test_curator.py  test_filter.py  test_fingerprints.py  test_main.py  test_package_imports.py  test_path_manager.py  test_preflight.py  test_public_pipeline_api.py  test_reporter.py  test_result_manager.py
utils/: collection_utils.py  path_manager.py  result_manager.py
