# SPDX-License-Identifier: LGPL-3.0-or-later
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chamanp"
dynamic = ["version"]
description = "Pre-stable tools for reproducible molecular dataset curation and preparation."
readme = "README.md"
license = "LGPL-3.0-or-later"
license-files = ["LICENSE", "COPYING", "COPYING.LESSER"]
authors = [
    { name = "Flavio F. Contreras-Torres", email = "contreras.flavio@tec.mx" }
]
keywords = [
    "cheminformatics",
    "natural products",
    "molecular datasets",
    "data curation",
    "RDKit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23.2",
    "rdkit>=2022.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "twine>=4.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/NanoBiostructuresRG/chamanp"
Repository = "https://github.com/NanoBiostructuresRG/chamanp"
Issues = "https://github.com/NanoBiostructuresRG/chamanp/issues"

[project.scripts]
chamanp = "chamanp.cli:main"

[tool.hatch.version]
path = "chamanp/version.py"

[tool.hatch.build.targets.wheel]
packages = ["chamanp"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/docs",
    "/mkdocs.yml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
tmp_path_retention_count = 0
tmp_path_retention_policy = "none"
